# winldap-example

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: CmakeUserRulesOverride.cmake  FindWldap32.cmake
example/modify/: add_or_modify.cpp  add_or_modify.hpp  main.cpp
example/search/: list_attributes.cpp  list_attributes.hpp  main.cpp
include/ldap/: ldap_error.hpp  ldap_error_code.hpp  ldap_message.hpp  ldap_message_impl.hpp  ldap_result.hpp  ldap_session.hpp  ldap_session_impl.hpp  ldap_system_error.hpp  protocol_version.hpp  session_factory.hpp
src/ldap/: ldap_error.cpp  ldap_message.cpp  ldap_message_impl.cpp  ldap_result.cpp  ldap_session.cpp  ldap_session_impl.cpp  ldap_system_error.cpp  session_factory.cpp
test/: CMakeLists.txt  test_runner.cpp
test/src/: dummy.cpp
